# cross-lingual-ctc

./: .gitignore  pyproject.toml
configs/: rec_svtrnet_nom_exp_1.0.yml  rec_svtrnet_nom_exp_2.0.yml  svtrnet.yml
configs/soft_ctc/: crnn.yml
data/: __init__.py  collate_fn.py  simple_dataset.py
data/imaug/: __init__.py  abinet_aug.py  label_ops.py  operators.py  rec_img_aug.py  text_image_aug.py
losses/: __init__.py  rec_ctc_loss.py
losses/softctc/: equations.py  soft_ctc_loss.py
losses/softctc/models/: __init__.py  batch_connections.py  connections.py
losses/wfst/: __init__.py  ctc_loss.py  stc_loss.py  utils.py
metrics/: __init__.py  rec_metric.py
models/: __init__.py  rec_crnn.py  rec_svtrnet.py
optimizers/: __init__.py  lr_scheduler.py
postprocess/: __init__.py  rec_postprocess.py
tools/: summary.py  train.py
utils/dict/: nomnaocr.txt
